--- a/Hosting/Hosting.csproj
+++ b/Hosting/Hosting.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj" />
+    <ProjectReference Include="..\Services\EchoService\API\API.csproj" />
+    <ProjectReference Include="..\Services\WeatherForecast\API\API.csproj" />
   </ItemGroup>
 
 </Project>
